--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@
     padding: 0;
     font-family: 'Roboto', sans-serif;
   }
-  
+  html {
+    scroll-behavior: smooth;
+  }
   nav {
     height: 80px;
     background: transparent;
@@ -78,6 +80,11 @@
     background: #00b0ff;
     color: #ffffff;
   }
+
+  button a{
+  text-decoration: none;
+  colour: white,
+  }
   
   .column-right {
     display: flex;
@@ -85,14 +92,286 @@
     align-items: center;
     padding: 0rem 2rem;
   }
+
+  .column-left-about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0rem 2rem;
+  }
+
+  .column-right-about {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    color: #000;
+    padding: 0rem 2rem;
+  }
+  .column-right h2 {
+    margin-bottom: 1rem;
+    font-size: 3rem;
+  }
+  
+  .column-right p {
+    margin-bottom: 2rem;
+    font-size: 1.5rem;
+    line-height: 1.5;
+  }
   
   .hero-image {
     width: 100%;
     height: 100%;
   }
+
+  .about {
+    background: #fffff;
+  }
   
+  .about-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 95vh;
+    padding: 3rem calc((100vw - 1300px) / 2);
+  }
+//TimeLine Styling
+.container {
+  margin: 0;
+  padding: 0;
+  font-family: Roboto;
+  line-height: 20px;
+  font-size: 14px;
+  font-weight: 500;
+  background: #00b0ff;
+}
+#timeline {
+  position: relative;
+ width: 90%;
+ margin: 30px auto;
+ line-height: 1.5em;
+ font-size: 14px;
+ -webkit-transition: all 0.4s ease;
+ -moz-transition: all 0.4s ease;
+ -ms-transition: all 0.4s ease;
+ transition: all 0.4s ease;
+   /* transition: all 0.4s ease;			*/
+   /* same as:           					*/
+   /* transition-property: all           	*/
+   /* transition-duration: 0.4s          	*/
+   /* transition-timing-function: ease   	*/
+   /* transition-delay: 0s          		*/
+}
+
+/* timeline vertical line */
+#timeline:before {
+   position: absolute; 
+   top: 0;
+   left: 50%;
+   
+   content: "";
+   width: 3px;
+   height: 100%;
+   
+   background: #00b0ff;
+}
+
+/* block at the end of timeline to lengthen the line */
+#timeline:after {
+   content: "";
+   display: block;
+   width: 100%;
+   height: 1px;
+   
+   /* clear float */
+   clear: both;
+}
+
+#timeline .timeline-item {
+   position: relative;
+   
+   /* distance between items */
+   margin-bottom: 20px;
+}
+
+/* spacing between items and clear float */
+#timeline .timeline-item:after, 
+#timeline .timeline-item:before {
+   content: '';
+   display: block;
+   width: 100%;
+   
+   clear: both; 
+}
+
+/* position of icon */
+#timeline .timeline-item .timeline-icon {
+   position: absolute;
+   top: 0;
+   left: 50%;
+   
+   width: 50px;
+   height: 50px;
+   margin-left: -23px;
+   
+   -webkit-border-radius: 50%;
+   -moz-border-radius: 50%;
+   -ms-border-radius: 50%;
+   border-radius: 50%; 
+   
+   background: #ee4d4d;
+   
+   overflow: hidden;
+}
+
+/* not active */
+#timeline .timeline-item .timeline-icon img {
+   position: relative;
+   top: 14px;
+   left: 14px; 
+}
+/* animated font */
+#timeline .timeline-item .timeline-icon i {
+   position: relative;
+   top: 4px;
+   left: -1px;
+}
+/* not animated font */
+#timeline .timeline-item .timeline-icon .simi-i {
+ position: relative;
+   top: 10px;
+   left: 6px;
+}
+
+/* timeline content */
+#timeline .timeline-item .timeline-content {
+   width: 45%;
+   padding: 20px;
+   
+   background: #fff;
+   
+   -webkit-box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
+   -moz-box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
+   -ms-box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
+   box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
+   
+   -webkit-border-radius: 5px;
+   -moz-border-radius: 5px;
+   -ms-border-radius: 5px;
+   border-radius: 5px;
+   
+   -webkit-transition: all 0.3s ease;
+   -moz-transition: all 0.3s ease;
+   -ms-transition: all 0.3s ease;
+   transition: all 0.3s ease; 
+}
+ 
+/* Heading timeline content */
+#timeline .timeline-item .timeline-content h2 {
+   padding: 15px;
+   
+   /* position of the heading "box" */
+   margin: -20px -20px 0 -20px;
+   
+   font-weight: 500;
+   -webkit-border-radius: 3px 3px 0 0;
+   -moz-border-radius: 3px 3px 0 0;
+   -ms-border-radius: 3px 3px 0 0;
+   border-radius: 3px 3px 0 0; 
+   
+   background: #00b0ff;
+   
+   color: #fff;
+}
+
+/* small arrow nearby header "box" */
+#timeline .timeline-item .timeline-content:before {
+   position: absolute;
+   top: 20px;
+   left: 45%;
+   
+   content: '';
+   
+   width: 0;
+   height: 0;
+   
+   border-top: 7px solid transparent;
+   border-bottom: 7px solid transparent;
+   border-left: 7px solid #00b0ff; 
+}
+
+/* shift content to the right side */
+#timeline .timeline-item .timeline-content.right {
+   float: right; 
+}
+
+/* small arrow nearby header "box" */
+#timeline .timeline-item .timeline-content.right:before {
+   right: 45%;
+   left: inherit;
+   
+   content: '';
+   
+   border-left: 0;
+   border-right: 7px solid #00b0ff; 
+}
+
+@media screen and (max-width: 810px) {     /* 768px */
+
+ /* Timeline */
+
+ #timeline {
+   margin: 30px;
+   padding: 0; 
+ }
+   
+   /* all floated right */
+   #timeline .timeline-item .timeline-content {
+   width: 90%;
+       
+   float: right; 
+ }
+   
+   /* small arrow only on left side */
+   #timeline .timeline-item .timeline-content:before, 
+   #timeline .timeline-item .timeline-content.right:before {
+       left: 10%;
+       margin-left: -6px;
+       border-left: 0;
+       border-right: 7px solid #ee4d4d; 
+ }
+   
+   /* timeline icon outer left */
+   #timeline .timeline-item .timeline-icon {
+     left: 0; 
+ } 
+   
+   /* timeline vertical line */
+   #timeline:before {
+   left: 0; 
+ }
+ 
+}
+
+.contact {
+  background: #fffff;
+}
+
+.contact-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  height: 95vh;
+  padding: 3rem calc((100vw - 1300px) / 2);
+}
+
+
   @media screen and (max-width: 768px) {
     .hero-container {
+      grid-template-columns: 1fr;
+    }
+    .about-container{
+      grid-template-columns: 1fr;
+    }
+    .contact-container{
       grid-template-columns: 1fr;
     }
   }
