--- a/style.css
+++ b/style.css
@@ -8,8 +8,18 @@
   html {
     scroll-behavior: smooth;
   }
+
+  .navbar-item:hover{
+     text-decoration: underline;
+  }
+
+hr{
+   margin: auto;
+   width: 400px;
+   border-top: 1px solid #8c8b8b;
+}
 //TimeLine Styling
-.container {
+.timeline-container {
   margin: 0;
   padding: 0;
   font-family: Roboto;
@@ -17,6 +27,14 @@
   font-size: 14px;
   font-weight: 500;
   background: #00b0ff;
+}
+.timeline-container h2 {
+   text-align: center;
+   font-weight: 600;
+   color:#363636;
+   font-size: 1.75em;
+   line-height: 1.125;
+
 }
 #timeline {
   position: relative;
@@ -140,7 +158,7 @@
 }
  
 /* Heading timeline content */
-#timeline .timeline-item .timeline-content h2 {
+#timeline .timeline-item .timeline-content h3 {
    padding: 15px;
    
    /* position of the heading "box" */
@@ -155,6 +173,7 @@
    background: #00b0ff;
    
    color: #fff;
+   text-align: center;
 }
 
 /* small arrow nearby header "box" */
@@ -211,7 +230,7 @@
        left: 10%;
        margin-left: -6px;
        border-left: 0;
-       border-right: 7px solid #ee4d4d; 
+       border-right: 7px solid #00b0ff; 
  }
    
    /* timeline icon outer left */
