--- a/style.css
+++ b/style.css
@@ -18,6 +18,13 @@ hr{
    width: 400px;
    border-top: 1px solid #8c8b8b;
 }
+
+.footer  i:hover {
+   color: #00b0ff;
+   transition: top ease 0.5s;
+   transform: translate(0, -10px);
+}
+
 //TimeLine Styling
 .timeline-container {
   margin: 0;
